samples/_failures_safe/1761461389_9e78f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_efbee421.c: In function ‘tokenize’:
./samples/SAFE/__tmp_efbee421.c:155:20: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  155 |             tokens[token
      |                    ^~~~~
      |                    Token
./samples/SAFE/__tmp_efbee421.c:155:20: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_efbee421.c:155:25: error: expected ‘]’ at end of input
  155 |             tokens[token
      |                         ^
      |                         ]
./samples/SAFE/__tmp_efbee421.c:155:13: error: expected declaration or statement at end of input
  155 |             tokens[token
      |             ^~~~~~
./samples/SAFE/__tmp_efbee421.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_efbee421.c:155:13: error: expected declaration or statement at end of input
